# pycloudevents

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/pycloudevents/: cloudevent.py
tests/: test_cloudevent.py
