[project]
name = "pycloudevents"
version = "0.1.0"
description = "A third party cloudevents 1.0 SDK for Python."
authors = [
    {name = "-LAN-", email = "laipz8200@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
